@@ -107,4 +107,13 @@ public interface ZooKeeperServerMXBean {
      * @return number of alive client connections
      */
     public long getNumAliveConnections();
+
+    /**
+     * @return estimated size of data directory in bytes
+    */
+    public long getDataDirSize();
+    /**
+     * @return estimated size of log directory in bytes
+     */
+    public long getLogDirSize();
 }
