@@ -219,6 +219,9 @@ IMPROVEMENTS:
   ZOOKEEPER-2140: NettyServerCnxn and NIOServerCnxn code should be improved
   (Arshad Mohammad via rgs)
 
+  ZOOKEEPER-1423: 4lw and jmx should expose the size of the datadir/datalogdir
+  (Edward Ribeiro via rgs)
+
 Release 3.5.0 - 8/4/2014
 
 NEW FEATURES:
